Fix text wrap

--- a/mitosheet/css/toolbar.css
+++ b/mitosheet/css/toolbar.css
@@ -143,7 +143,7 @@
 }
 
 .horizontal-align-content .mito-toolbar-button-label {
-  text-wrap: nowrap;
+  white-space: nowrap;
 }
 
 .mito-toolbar-tabbar-tabname span {
